# float16_t

./: Anti-996  Makefile  README.md  float16_t.hpp  fp16_storage_t.cc  fp16_storage_t.hh  meson.build  meson.options
half-private/: fp_convert.hh  helpers.hh
include/fps/: aligned_array.hh  fp16_storage_t.hh
meson/: check_for_asl.cc  check_for_bit_cast.cc
meson/cross/: x64-msvc-wine-toolchain.ini
tests/: .clang-format-ignore  test.cc
